# tubex-lib

./: .travis.yml  .travisold  CMakeLists.txt
examples/basics/ex_05_uctc/: CMakeLists.txt  main.cpp
examples/robotics/ex_07_2d_estimator/: CMakeLists.txt  main.cpp
examples/robotics/ex_08_3d_estimator/: CMakeLists.txt  build.sh  fctc_state.txt  fun_matR.txt  fun_matT.txt  fun_matTi.txt  main.cpp
examples/robotics/ex_08_3d_estimator/ctc_acc/: ctc_acc1.txt  ctc_acc2.txt  ctc_acc3.txt  ctc_acc4.txt  ctc_acc5.txt  ctc_acc6.txt
examples/robotics/ex_08_3d_estimator/ctc_eul/: ctc_eul1.txt  ctc_eul2.txt  ctc_eul3.txt
examples/robotics/ex_08_3d_estimator/ctc_fluxopt/: ctc_fluxopt1.txt  ctc_fluxopt2.txt  ctc_fluxopt3.txt  ctc_fluxopt4.txt  ctc_fluxopt5.txt  ctc_fluxopt6.txt
examples/robotics/ex_08_3d_estimator/ctc_gps/: ctc_gps1.txt  ctc_gps2.txt  ctc_gps3.txt
examples/robotics/ex_08_3d_estimator/ctc_mag/: ctc_mag1.txt  ctc_mag2.txt  ctc_mag3.txt  ctc_mag4.txt  ctc_mag5.txt  ctc_mag6.txt
examples/robotics/ex_08_3d_estimator/ctc_matR/: ctc_matR1.txt  ctc_matR2.txt  ctc_matR3.txt  ctc_matR4.txt  ctc_matR5.txt  ctc_matR6.txt
examples/robotics/ex_08_3d_estimator/ctc_vispos/: ctc_vispos1.txt  ctc_vispos2.txt  ctc_vispos3.txt  ctc_vispos4.txt  ctc_vispos5.txt  ctc_vispos6.txt
python/: CMakeLists.txt  pyibex_tubex.cpp  pyibex_tubex.old  setup.py.in
python/pytubex/: __init__.py
scripts/cmake_modules/: FindIbexLib.cmake
scripts/ibex/: build_IbexLib.sh
src/core/contractors/: tubex_CtcDeriv.cpp  tubex_CtcDeriv.h  tubex_CtcStatic.cpp  tubex_CtcStatic.h
src/core/contractors/dyn/: tubex_CtcEval.cpp  tubex_CtcEval.h  tubex_CtcStatic.cpp  tubex_CtcStatic.h
src/core/dynamics/slice/: tubex_Slice.cpp  tubex_Slice.h
src/core/dynamics/tube/: tubex_Tube.cpp  tubex_Tube.h  tubex_TubeVector.cpp  tubex_TubeVector.h
src/core/functions/: tubex_Function.cpp  tubex_Function.h  tubex_TFunction.cpp  tubex_TFunction.h
src/robotics/graphics/: tubex_VIBesFigMap.h
